--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="class">Number 1 - I'm a class!</p>
     <div id="secondelement">Number 2 - I'm one ID.</div>
-    <p class="class" style="font-size: 24px;">Number 3 - I'm a class, but cooler!</p>
+    <p class="class thirdelement" >Number 3 - I'm a class, but cooler!</p>
     <div id="fourthelement">Number 4 - I'm another ID.</div>
     <p class="class">Number 5 - I'm a class!</p>
   </body>
